# alignment_ann_transfer

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: CI.yml
src/alignment_ann_transfer/: __init__.py  commentary.py  translation.py  utils.py
tests/commentary/: test_commentary_ann_transfer.py
tests/commentary/data/: aligned_commentary.json  aligned_commentary_segments.json  aligned_display_commentary.json  commentary_pechas_mapping.json  mapping.json  root_pechas_mapping.json  serialized_commentary_display.json
tests/commentary/data/P1/IB42962D2/layers/F741/: Tibetan_Segment-2448.json
tests/commentary/data/P3/IDE145ACB/: metadata.json
tests/commentary/data/P4/IE292A440/: metadata.json
tests/commentary/data/P4/IE292A440/base/: 383D.txt
tests/commentary/data/P4/IE292A440/layers/383D/: Meaning_Segment-C4C6.json
tests/translation/: test_translation_ann_transfer.py
tests/translation/data/: aligned_display_translation.json  aligned_translation.json  expected_mapping.json  root_pechas_mapping.json  serialized_translation.json  serialized_translation_display.json  translation_pechas_mapping.json
tests/translation/data/P1/I15C4AA72/layers/A340/: Tibetan_Segment-37F9.json
tests/translation/data/P3/I4FA57826/layers/AC0A/: English_Segment-B9B5.json
tests/translation/data/P4/I18FD6864/: metadata.json
tests/translation/data/P4/I18FD6864/base/: CE01.txt
tests/translation/data/P4/I18FD6864/layers/CE01/: English_Segment-B9B5.json
tests/translation/data/P4/IE83CF29A/: metadata.json
(+1 files in other folders)
